Created Classdiagram in Suchfunktion.

--- a/Textuelle_Beschreibung/Grundbausteine/main.tex
+++ b/Textuelle_Beschreibung/Grundbausteine/main.tex
@@ -118,7 +118,7 @@ Diese Methode gibt den offiziellen Namen des Kartenobjekts zurück.
     \item keine
 \end{itemize}
 \paragraph*{Rückgabewert}
-offiziellen Namen des Kartenobjekts
+offizieller Name des Kartenobjekts
 
 \subsection{getMapId}
 \paragraph*{Kurzbeschreibung}
