--- a/Textuelle_Beschreibung/Grundbausteine/main.tex
+++ b/Textuelle_Beschreibung/Grundbausteine/main.tex
@@ -31,7 +31,7 @@ Diese Methode gibt den Bezeichner des Alias zurück.
 \paragraph*{Rückgabewert}
 Bezeichner des Alias
 
-\subsection{getMapId}
+\subsection{getMapId}%$$$M
 \paragraph*{Kurzbeschreibung}
 Diese Methode gibt die KartenID des Alias zurück.
 \paragraph*{Beschreibung}
@@ -97,7 +97,7 @@ Ein Kartenobjekt, nach dem in der App gesucht werden kann.
 \paragraph*{Anmerkung}
 Die Kartenobjekte werden lokal und auf dem Server gespeichert.
 
-\subsection{getAdditionalData}
+\subsection{getAdditionalData}%$$$M
 Diese Methode gibt die zusätzlichen Daten des Kartenobjekts zurück.
 \paragraph*{Beschreibung}
 Diese Methode gibt die zusätzlichen Daten des Kartenobjekts zurück.
@@ -108,7 +108,7 @@ Diese Methode gibt die zusätzlichen Daten des Kartenobjekts zurück.
 \paragraph*{Rückgabewert}
 zusätzlichen Daten des Kartenobjekts
 
-\subsection{getOfficialName}
+\subsection{getOfficialName}%$$$M
 \paragraph*{Kurzbeschreibung}
 Diese Methode gibt den offiziellen Namen des Kartenobjekts zurück.
 \paragraph*{Beschreibung}
@@ -120,7 +120,7 @@ Diese Methode gibt den offiziellen Namen des Kartenobjekts zurück.
 \paragraph*{Rückgabewert}
 offizieller Name des Kartenobjekts
 
-\subsection{getMapId}
+\subsection{getMapId}%$$$M
 \paragraph*{Kurzbeschreibung}
 Diese Methode gibt die KartenID des Kartenobjekts zurück.
 \paragraph*{Beschreibung}
@@ -132,7 +132,7 @@ Diese Methode gibt die KartenID des Kartenobjekts zurück.
 \paragraph*{Rückgabewert}
 KartenID des Kartenobjekts
 
-\subsection{getGeocoding}
+\subsection{getGeocoding}%$$$M
 \paragraph*{Beschreibung}
 Diese Methode gibt die Geokodierung des Kartenobjekts zurück.
 \paragraph*{Parameter}
