Corrected parameter notation.

--- a/Textuelle_Beschreibung/Suchfunktion/main.tex
+++ b/Textuelle_Beschreibung/Suchfunktion/main.tex
@@ -14,7 +14,7 @@ Diese Methode ermöglicht die Suche von Gebäuden und Räumen über die Eingabe 
 Zeigt eine Liste von Vorschlägen (die Suchbegriffe), falls vorhanden, und erlaubt dem Benutzer, einen Vorschlag auszuwählen oder die Eingabe vollständig selbst vorzunehmen.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item Liste aller Suchbegriffe
+    \item searchKeys : List<String> Liste aller Suchbegriffe
 \end{itemize}
 \paragraph*{Rückgabewert}
 Suchbegriff, den der Benutzer eingegeben hat
@@ -28,7 +28,7 @@ Diese Methode gibt das zum Suchbegriffe gehörenden Kartenobjekt zurück.
 Diese Klasse ermittelt das zu den Suchbegriffen gehörenden Kartenobjekt und gibt dieses zurück.
 \paragraph*{Parameter}
 \begin{itemize}
-    \item Suchbegriffe
+    \item searchKey : String Suchbegriff
 \end{itemize}
 \paragraph*{Rückgabewert}
 Kartenobjekt
