Corrected Rückgabewert notation.

--- a/Textuelle_Beschreibung/Grundbausteine/main.tex
+++ b/Textuelle_Beschreibung/Grundbausteine/main.tex
@@ -17,7 +17,7 @@ Diese Methode gibt zurück, ob der Alias lokal ist (wahr) oder nicht (falsch).
     \item keine
 \end{itemize}
 \paragraph*{Rückgabewert}
-ob der Alias lokal ist
+bool ob der Alias lokal ist
 
 \subsection{getIdentifier}%$$$M
 \paragraph*{Kurzbeschreibung}
@@ -29,7 +29,7 @@ Diese Methode gibt den Bezeichner des Alias zurück.
     \item keine
 \end{itemize}
 \paragraph*{Rückgabewert}
-Bezeichner des Alias
+String Bezeichner des Alias
 
 \subsection{getMapId}%$$$M
 \paragraph*{Kurzbeschreibung}
@@ -41,7 +41,7 @@ Diese Methode gibt die KartenID des Alias zurück.
     \item keine
 \end{itemize}
 \paragraph*{Rückgabewert}
-KartenID des Alias
+MapId KartenID des Alias
 
 
 \section{Person}
@@ -60,7 +60,7 @@ Diese Methode liefert den vollständigen Namen der Person einschließlich des Ti
     \item keine
 \end{itemize}
 \paragraph*{Rückgabewert}
-Name der Person
+String Name der Person
 
 \subsection{getMapId}
 \paragraph*{Kurzbeschreibung}
@@ -72,7 +72,7 @@ Diese Methode gibt die KartenID der Person zurück.
     \item keine
 \end{itemize}
 \paragraph*{Rückgabewert}
-KartenID
+MapId KartenID
 
 
 \section{Building}
@@ -108,7 +108,7 @@ Diese Methode gibt die zusätzlichen Daten des Kartenobjekts zurück.
     \item keine
 \end{itemize}
 \paragraph*{Rückgabewert}
-zusätzlichen Daten des Kartenobjekts
+? zusätzlichen Daten des Kartenobjekts
 
 \subsection{getOfficialName}%$$$M
 \paragraph*{Kurzbeschreibung}
@@ -120,7 +120,7 @@ Diese Methode gibt den offiziellen Namen des Kartenobjekts zurück.
     \item keine
 \end{itemize}
 \paragraph*{Rückgabewert}
-offizieller Name des Kartenobjekts
+String offizieller Name des Kartenobjekts
 
 \subsection{getMapId}%$$$M
 \paragraph*{Kurzbeschreibung}
@@ -132,7 +132,7 @@ Diese Methode gibt die KartenID des Kartenobjekts zurück.
     \item keine
 \end{itemize}
 \paragraph*{Rückgabewert}
-KartenID des Kartenobjekts
+MapId KartenID des Kartenobjekts
 
 \subsection{getGeocoding}%$$$M
 \paragraph*{Beschreibung}
@@ -142,4 +142,4 @@ Diese Methode gibt die Geokodierung des Kartenobjekts zurück.
     \item keine
 \end{itemize}
 \paragraph*{Rückgabewert}
-Geokodierung
+Geocoding Geokodierung
