--- a/Textuelle_Beschreibung/Suchfunktion/main.tex
+++ b/Textuelle_Beschreibung/Suchfunktion/main.tex
@@ -17,7 +17,7 @@ Zeigt eine Liste von Vorschlägen (die Suchbegriffe), falls vorhanden, und erlau
     \item searchKeys : List<String> Liste aller Suchbegriffe
 \end{itemize}
 \paragraph*{Rückgabewert}
-Suchbegriff, den der Benutzer eingegeben hat
+String Suchbegriff, den der Benutzer eingegeben hat
 \paragraph*{Notizen zur Implementierung}
 Benutzt eine Instanz von SearchView (https://developer.android.com/guide/topics/search/search-dialog#SearchableActivity).
 
@@ -31,7 +31,7 @@ Diese Klasse ermittelt das zu den Suchbegriffen gehörenden Kartenobjekt und gib
     \item searchKey : String Suchbegriff
 \end{itemize}
 \paragraph*{Rückgabewert}
-Kartenobjekt
+MapObject Kartenobjekt zum searchKey
 
 
 \section{Module: SearchView}
