Added class Geocoding in Grundbausteine.

--- a/Textuelle_Beschreibung/Grundbausteine/main.tex
+++ b/Textuelle_Beschreibung/Grundbausteine/main.tex
@@ -143,3 +143,10 @@ Diese Methode gibt die Geokodierung des Kartenobjekts zurück.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Geocoding Geokodierung
+
+
+\section{Geocoding}
+\paragraph*{Beschreibung}
+Die Definition des Standorts.
+\paragraph*{Anmerkung}
+Die Geocodings werden lokal und auf dem Server gespeichert.
