--- a/main.tex
+++ b/main.tex
@@ -4,5 +4,6 @@
     \inpmod{00_Titelseite}
     \inpmod{00_Inhaltsverzeichnis}
 
+    \inpmod{04_Admin_Panel}
     \inpmod{99_Glossar}
 \end{document}
