Added content to Public-Layout

--- a/Kapitel/04_Admin_Panel/01_Layouts/02_Admin_Layout/main.tex
+++ b/Kapitel/04_Admin_Panel/01_Layouts/02_Admin_Layout/main.tex
@@ -17,7 +17,7 @@ Der Seiteninhalt nimmt den restlichen horizontalen Bereich ein, der nicht durch 
 Der Seiteninhalt hat eine einheitliche Hintergrundfarbe.
 Der Seiteninhalt wird durch die Seiten, die das Admin-Layout nutzen, mit Inhalt gefüllt.
 
-\paragraph*{Dynamischer Aufbau}
+\paragraph*{Dynamisches Verhalten}
 Alle Seiten, die auf dem Admin-Layout basieren, stehen nur angemeldeten Administratoren zur Verfügung. 
 Nicht ausreichend autorisierte Benutzer werden auf die Startseite weitergeleitet, wenn diese versuchen, eine solche Seite aufzurufen.
 
@@ -31,3 +31,8 @@ Wird auf das \dq Logout\dq - Element geklickt, so wird der Nutzer abgemeldet und
 
 \subparagraph*{Seiteninhalt}
 Keines
+
+\paragraph*{Mobil}
+
+\paragraph*{Allgemeines dynamisches Verhalten}
+Ist der Nutzer auf einer Seite, die das Admin-Layout nutzt, nicht angemeldet, so wird er auf die Startseite weitergeleitet.
