--- a/Kapitel/04_Admin_Panel/02_Aufbau/01_Startseite/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/01_Startseite/main.tex
@@ -1,7 +1,10 @@
 \subsection{Startseite}
 
 Die Startseite ist die erste Seite des Admin-Panels und ist durch die URL \href{https://pse.itermori.de/admin}{https://pse.itermori.de/admin} aufrufbar.
-Auf der Startseite wird der Name des PSE-Projektes angezeigt. \\
+Auf der Startseite wird der Name des PSE-Projektes angezeigt.
+
+\paragraph{Layout}
+Die Startseite nutzt das Public-Layout.
 
 \paragraph{Aufgabe}
 Die Startseite hat die folgenden Aufgaben:
