--- a/Kapitel/04_Admin_Panel/01_Layouts/00_Beschreibung/main.tex
+++ b/Kapitel/04_Admin_Panel/01_Layouts/00_Beschreibung/main.tex
@@ -1,3 +1,3 @@
 Layouts definieren das Aussehen des Admin-Panels.
 Wir unterscheiden zwischen einem Layout für den authentifizierten Bereich und den nicht authentifizierten Bereich.
-Jedes Layout unterscheidet die Bildschirmgröße.
+Jedes Layout unterscheidet zwischen einer Desktopansicht und einer Mobilansicht. 
