--- a/Kapitel/04_Admin_Panel/02_Aufbau/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/main.tex
@@ -1,7 +1,7 @@
 \section{Aufbau}
 
 \inprelmod{00_Beschreibung}
-\inprelmod{01_Login}
+\inprelmod{01_Startseite}
 \inprelmod{02_Dashboard}
 \inprelmod{03_Alias_Vorschläge}
 \inprelmod{04_Offizielle_Aliasse}
