--- a/Kapitel/04_Admin_Panel/02_Aufbau/01_Startseite/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/01_Startseite/main.tex
@@ -1,17 +1,28 @@
 \subsection{Startseite}
 
-Die Startseite ist die erste Seite des Admin-Panels und ist durch die URL \href{https://pse.itermori.de/admin}{https://pse.itermori.de/admin} aufrufbar.
-Auf der Startseite wird der Name des PSE-Projektes angezeigt.
+Die Startseite ist die erste Seite des Admin-Panels und somit der Index.
+Auf der Startseite wird der Name des PSE-Projektes angezeigt sowie eine Kurzbeschreibung.
 
 \paragraph{Layout}
 Die Startseite nutzt das Public-Layout.
+
+\paragraph*{URL}
+Die Startseite ist unter \href{https://pse.itermori.de/admin}{https://pse.itermori.de/admin} aufrufbar.
 
 \paragraph{Aufgabe}
 Die Startseite hat die folgenden Aufgaben:
 
 \begin{itemize}
+    \item Anzeigen des Webseitentitels
+    \item Anzeigen der Beschreibung
     \item Authentifizierungsstelle für Nutzer
     \item Überprüfung des Berechtigungslevels für Nutzer
     \item Automatische Weiterleitung von Administratoren zum Dashboard
-    \item 
+    \item Anzeigen von Verlinkungen zu Projektressourcen
 \end{itemize}
+
+\paragraph*{Statischer Aufbau}
+Der spezifische Inhalt dieser Seite besteht ausschließlich aus einem Titel und der zugehörigen Beschreibung.
+
+\paragraph*{Dynamisches Verhalten}
+Keines
