--- a/Kapitel/04_Admin_Panel/02_Aufbau/01_Startseite/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/01_Startseite/main.tex
@@ -6,8 +6,11 @@ Auf der Startseite wird der Name des PSE-Projektes angezeigt sowie eine Kurzbesc
 \paragraph{Layout}
 Die Startseite nutzt das Public-Layout.
 
-\paragraph*{URL}
+\paragraph*{Erreichbarkeit}
 Die Startseite ist unter \href{https://pse.itermori.de/admin}{https://pse.itermori.de/admin} aufrufbar.
+
+\paragraph*{Verwendbarkeit}
+Jeder kann die Startseite aufrufen und verwenden.
 
 \paragraph{Aufgabe}
 Die Startseite hat die folgenden Aufgaben:
