--- a/Kapitel/04_Admin_Panel/02_Aufbau/02_Dashboard/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/02_Dashboard/main.tex
@@ -1,6 +1,17 @@
 \subsection{Dashboard}
 
 Das Dashboard ist die erste Seite auf die der Nutzer weitergeleitet wird, sofern er sich als Administrator authentifiziert hat.
+
+\paragraph*{Layout}
+Das Dashboard benutzt das Admin-Layout.
+
+\paragraph*{Erreichbarkeit}
+Das Dashboard ist unter \href{https://pse.itermori.de/admin/panel}{https://pse.itermori.de/admin/panel} erreichbar.
+
+\paragraph*{Verwendbarkeit}
+Ausschließlich authentifizierte Administratoren können diese Seite verwenden.
+
+\paragraph*{Aufgabe}
 Sie zeigt verschiedene Informationen an, so mindestens:
 
 \begin{itemize}
