Implemented requested changes

--- a/Kapitel/04_Admin_Panel/02_Aufbau/03_Alias_Vorschläge/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/03_Alias_Vorschläge/main.tex
@@ -9,5 +9,7 @@ Alias-Vorschläge werden tabellarisch angezeigt, die Spalten sind durch folgende
     Das zugehörige Gebäude des Alias-Vorschlags
 \paragraph*{Raumnummer} 
     Der zugehörige Raum des Alias-Vorschlags, \dq - \dq{} falls kein zugehöriger Raum existiert
+\paragraph*{Bewertungen}
+    Die Anzahl an positiven und auch negativen Bewertungen zu einem Alias-Vorschlag
 \paragraph*{Aktionen} 
     Annehmen, Ablehnen, Blacklisten
