--- a/Kapitel/04_Admin_Panel/02_Aufbau/04_Offizielle_Aliasse/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/04_Offizielle_Aliasse/main.tex
@@ -10,4 +10,4 @@ Diese Aliasse werden tabellarisch angezeigt, die Spalten sind wie folgt gegeben:
 \paragraph*{Raumnummer} 
     Der zugehörige Raum des Alias-Vorschlags, \dq - \dq{} falls kein zugehöriger Raum existiert
 \paragraph*{Aktionen} 
-    Löschen, Blacklisten
+    Löschen
