Added Method Details to Marker classes

--- a/Kapitel/02_App/01_View/Karte/Marker/main.tex
+++ b/Kapitel/02_App/01_View/Karte/Marker/main.tex
@@ -76,6 +76,10 @@ Gibt es keine Etagenkarte, wird der Marker als großer Standort-Pfeil angezeigt.
 \paragraph*{Rückgabewert}
 Void, keine.
 
+\subsection{Weitere Implementierungen}
+Diese Klasse implementiert ebenfalls die abstrakte Methode resetFocus von MapObjectMarker 
+und benutzt den gleichen (geerbten) Konstruktor.
+
 
 \section{RoomMarker}
 \paragraph*{Typ} 
@@ -94,3 +98,7 @@ Der Marker als großer Standort-Pfeil angezeigt.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Void, keine.
+
+\subsection{Weitere Implementierungen}
+Diese Klasse implementiert ebenfalls die abstrakte Methode resetFocus von MapObjectMarker 
+und benutzt den gleichen (geerbten) Konstruktor.
