Implemented requested changes

--- a/Kapitel/02_App/01_View/Karte/DisplayData/main.tex
+++ b/Kapitel/02_App/01_View/Karte/DisplayData/main.tex
@@ -41,4 +41,4 @@ Gibt die MapId des Kartenobjekts zurück.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-int MapId des Kartenobjekts zurück.
+int MapId des Kartenobjekts.
