--- a/Kapitel/02_App/01_View/Karte/Marker/main.tex
+++ b/Kapitel/02_App/01_View/Karte/Marker/main.tex
@@ -89,7 +89,7 @@ MapObjectMarker für Räume.
 
 \subsubsection{focusMarkerObject}%$$$M
 \paragraph*{Kurzbeschreibung}
-Beschreibt das (graphische) Verhalten des Markers, wenn er zugehörige Raum fokussiert wird.
+Beschreibt das (graphische) Verhalten des Markers, wenn der zugehörige Raum fokussiert wird.
 \paragraph*{Beschreibung}
 Der Marker als großer Standort-Pfeil angezeigt.
 \paragraph*{Parameter}
