Changed void as requested

--- a/Kapitel/02_App/01_View/Karte/Marker/main.tex
+++ b/Kapitel/02_App/01_View/Karte/Marker/main.tex
@@ -46,7 +46,7 @@ Beschreibt das (graphische) Verhalten des Markers, wenn das zugehörige Objekt f
     \item floorMapExists:Boolean Genau dann wahr, wenn es zum (evtl. indirekt) ausgewählten Gebäude eine Etagenkarte gibt.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Void, keine.
+Void.
 
 \subsubsection{resetFocus {abstract}}%$$$M
 \paragraph*{Beschreibung}
@@ -54,7 +54,7 @@ Setzt das Aussehen des Markers zurück, wenn er nicht mehr fokussiert wird.
 \paragraph*{Parameter}
 Keine.
 \paragraph*{Rückgabewert}
-Void, keine.
+Void.
 
 
 \section{BuildingMarker}
@@ -74,7 +74,7 @@ Gibt es keine Etagenkarte, wird der Marker als großer Standort-Pfeil angezeigt.
     \item floorMapExists:Boolean Genau dann wahr, wenn es zum (evtl. indirekt) ausgewählten Gebäude eine Etagenkarte gibt.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Void, keine.
+Void.
 
 \subsection{Weitere Implementierungen}
 Diese Klasse implementiert ebenfalls die abstrakte Methode resetFocus von MapObjectMarker 
@@ -97,7 +97,7 @@ Der Marker als großer Standort-Pfeil angezeigt.
     \item floorMapExists:Boolean Genau dann wahr, wenn es zum (evtl. indirekt) ausgewählten Gebäude eine Etagenkarte gibt.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Void, keine.
+Void.
 
 \subsection{Weitere Implementierungen}
 Diese Klasse implementiert ebenfalls die abstrakte Methode resetFocus von MapObjectMarker 
