--- a/Textuelle_Beschreibung/Suchfunktion/main.tex
+++ b/Textuelle_Beschreibung/Suchfunktion/main.tex
@@ -5,27 +5,7 @@
 Diese Klasse ermöglicht die Suche nach Gebäuden und Räumen über eine String-Eingabe in einem Textfeld, 
 dies kann eine Gebäudenummer, Gebäudenummer und Raumnummer, ein Alias oder eine Person sein.
 Zeigt eine Liste von Vorschlägen an, falls vorhanden, und ermöglicht es dem Benutzer, einen Vorschlag auszuwählen oder die Eingabe vollständig selbst vorzunehmen.
-\paragraph*{Anmerkung}
-Die Klasse wird nur lokal in der Anwendung verwendet, ohne jegliche Verbindung zum Server.
-
-\subsection{getSearchInput}%$$$M
-\paragraph*{Kurzbeschreibung}
-Diese Methode ermöglicht Benutzereingaben und gibt einen gültigen Suchbegriffe oder Null zurück.
-\paragraph*{Beschreibung}
-Diese Methode ermöglicht die Suche von Gebäuden und Räumen über die Eingabe eines Suchbegriffs in ein Textfeld.
-Zeigt eine Liste von Vorschlägen (die Suchbegriffe), falls vorhanden, und erlaubt dem Benutzer, einen Vorschlag auszuwählen oder die Eingabe vollständig selbst vorzunehmen.
-\paragraph*{Parameter}
-\begin{itemize}
-    \item keine
-\end{itemize}
-\paragraph*{Rückgabewert}
-String Suchbegriff, den der Benutzer eingegeben hat
-\paragraph*{Notizen zur Implementierung}
-Benutzt eine Instanz von SearchView (https://developer.android.com/guide/topics/search/search-dialog#SearchableActivity).
-Für das Durchsuchen der Daten wird getSuggestions genutzt.
-Die Suchvorschläge werden einem Curser übergeben.
-Dieser wird von einem CurserAdapter adaptiert und die Vorschläge werden so an die Instanz von SearchView gegeben.
-Dort werden die Vorschläge dann dem Benutzer angezeigt.
+Die Klasse gehört zu ViewModel.
 
 \subsection{getSuggestions}%$$$M
 \paragraph*{Kurzbeschreibung}
@@ -52,9 +32,36 @@ Diese Klasse ermittelt das zu den Suchbegriffen gehörenden Kartenobjekt und gib
 MapObject Kartenobjekt zum searchKey
 
 
-\section{Module: SearchView}
+\section{SearchInput}
+\paragraph*{Beschreibung}
+Diese Klasse ermöglicht die Eingabe eines Suchbegriffs in ein Textfeld durch den Benutzer, 
+die Anzeige einer Liste von Suchvorschlägen und die Auswahl eines Vorschlages durch den Benutzer, 
+indem er einen Vorschlag auswählt oder die Eingabe vollständig selbst vornimmt.
+Die Klasse gehört zu View.
+
+\subsection{getSearchInput}%$$$M
 \paragraph*{Kurzbeschreibung}
-Ein Widget, das dem Benutzer eine Benutzeroberfläche bietet, um eine Suchanfrage einzugeben und eine Anfrage an einen Suchanbieter zu senden. 
+Diese Methode ermöglicht Benutzereingaben und gibt einen gültigen Suchbegriff oder Null zurück.
+\paragraph*{Beschreibung}
+Diese Methode ermöglicht die Suche von Gebäuden und Räumen über die Eingabe eines Suchbegriffs in ein Textfeld.
+Zeigt eine Liste von Vorschlägen (die Suchbegriffe), falls vorhanden, und erlaubt dem Benutzer, einen Vorschlag auszuwählen oder die Eingabe vollständig selbst vorzunehmen.
+\paragraph*{Parameter}
+\begin{itemize}
+    \item keine
+\end{itemize}
+\paragraph*{Rückgabewert}
+String Suchbegriff, den der Benutzer eingegeben hat
+\paragraph*{Notizen zur Implementierung}
+Benutzt eine Instanz von SearchView (https://developer.android.com/guide/topics/search/search-dialog#SearchableActivity).
+Für das Durchsuchen der Daten wird getSuggestions von Search genutzt.
+Die Suchvorschläge werden einem Curser übergeben.
+Dieser wird von einem CurserAdapter adaptiert und die Vorschläge werden so an die Instanz von SearchView gegeben.
+Dort werden die Vorschläge dann dem Benutzer angezeigt.
+
+
+\section{Bibliothek SearchView}
+\paragraph*{Beschreibung}
+Ein bereits existierendes Widget, das dem Benutzer eine Benutzeroberfläche bietet, um eine Suchanfrage einzugeben und eine Anfrage an einen Suchanbieter zu senden. 
 Zeigt eine Liste von Suchvorschlägen oder -ergebnissen an, falls verfügbar 
 und ermöglicht es dem Benutzer, einen Vorschlag oder ein Ergebnis auszuwählen.
 Es ist möglich letzte Suchen prorisiert vorzuschlagen, diese Funktion wird auch verwendet.
