Fix typo as requested

--- a/Kapitel/00_Backend/MutationResolver/AliasMutation/blacklistAlias_String_boolean/main.tex
+++ b/Kapitel/00_Backend/MutationResolver/AliasMutation/blacklistAlias_String_boolean/main.tex
@@ -4,7 +4,7 @@ Setzt eine bestimmte Zeichenkette auf die Blacklist.
 \paragraph*{Beschreibung}
 Die Methode ist ausschließlich von Administratoren aufzurufen.
 Die Methode ermöglicht, dass ein Administrator eine bestimmte Zeichenkette auf die Blacklist setzen kann.
-Dies hat zur Folge, dass ein Aliasvorschlag, der sich genau aus dieser Zeichenkette zusammengesetzt ist, nicht hinzugefügt werden kann.
+Dies hat zur Folge, dass ein Aliasvorschlag, der genau aus dieser Zeichenkette zusammengesetzt ist, nicht hinzugefügt werden kann.
 Hierfür wird die Zeichenkette übergeben.
 \paragraph*{Parameter}
 \begin{itemize}
