Enhance sentence as requested

--- a/Kapitel/00_Backend/MutationResolver/AliasMutation/blacklistAlias_String_boolean/main.tex
+++ b/Kapitel/00_Backend/MutationResolver/AliasMutation/blacklistAlias_String_boolean/main.tex
@@ -13,6 +13,6 @@ Hierfür wird die Zeichenkette übergeben.
     		Die Zeichenkette, die man auf die Blacklist setzen möchte.
 \end{itemize}
 \paragraph*{Rückgabewert}
-Wahr, wenn die gewünschte Zeichenkette auf die Blacklist erfolgreich gesetzt werden konnte, ansonsten falsch.
+Wahr, wenn die gewünschte Zeichenkette erfolgreich auf die Blacklist gesetzt werden konnte, ansonsten falsch.
 
 \paragraph*{Notizen zur Implementierung}% optionaler Paragraph; nur stehen lassen, wenn benötigt
