--- a/Kapitel/00_Backend/MutationResolver/UserMutation/addUser_String_UserID/main.tex
+++ b/Kapitel/00_Backend/MutationResolver/UserMutation/addUser_String_UserID/main.tex
@@ -4,7 +4,7 @@ Fügt einen neuen Benutzer zur Datenbank hinzu.
 \paragraph*{Beschreibung}
 Die Methode ist ausschließlich von Administratoren aufzurufen.
 Die Methode ermöglicht, dass ein Administrator einen neuen Benutzer zur Datenbank aus allen Benutzern hinzufügen kann.
-Hierfür wird der Name des gewünschten Benutzers übergeben..
+Hierfür wird der Name des gewünschten Benutzers übergeben.
 \paragraph*{Parameter}
 \begin{itemize}
     \item user : String
