Added in offizielle Aliasse

--- a/Kapitel/04_Admin_Panel/02_Aufbau/03_Alias_Vorschläge/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/03_Alias_Vorschläge/main.tex
@@ -54,7 +54,7 @@ Die Spaltenüberschriften der Spalten 1-5 beinhalten ein Sortierungselement am r
 Der Abschnitt selber enthält die eindeutige Identifizierung des Kartenobjektes \verb#mapID# auf dass sich der Alias-Vorschlag bezieht. Dieser wird nicht angezeigt.
 
 \subparagraph*{Dynamisches Verhalten}
-Auf Klick auf ein Sortierungselement wird die Sortierung der Tabelle geändert.
+Bei Klick auf ein Sortierungselement wird die Sortierung der Tabelle geändert.
 Ist die Tabelle absteigend oder nicht nach der zugehörigen Spalte sortiert, so wird beim Klick auf das Sortierelement die Tabelle aufsteigend nach dieser Spalte sortiert.
 Ist die Tabelle bereits aufsteigend nach der zugehörigen Spalte sortiert, so wird beim Klick auf das Sortierelement die Tabelle absteigend nach dieser Spalte sortiert.
 
