--- a/Kapitel/04_Admin_Panel/02_Aufbau/04_Offizielle_Aliasse/main.tex
+++ b/Kapitel/04_Admin_Panel/02_Aufbau/04_Offizielle_Aliasse/main.tex
@@ -1,13 +1,82 @@
 \subsection{Offizielle Aliasse}
 
 Die Offizielle-Aliasse-Seite zeigt alle aktuell angenommenen und somit offiziellen Aliasse an.
-Diese Aliasse werden tabellarisch angezeigt, die Spalten sind wie folgt gegeben:
 
-\paragraph*{Alias-Vorschlag} 
-    Der Bezeichner des Alias-Vorschlags
-\paragraph*{Gebäudenummer} 
-    Das zugehörige Gebäude des Alias-Vorschlags
-\paragraph*{Raumnummer} 
-    Der zugehörige Raum des Alias-Vorschlags, \dq - \dq{} falls kein zugehöriger Raum existiert
-\paragraph*{Aktionen} 
-    Löschen
+\paragraph*{Layout}
+Die Offizielle-Alias-Seite benutzt das Admin-Layout.
+
+\paragraph*{Erreichbarkeit}
+Die Offizielle-Alias-Seite ist unter \href{https://pse.itermori.de/admin/alias}{https://pse.itermori.de/admin/alias} erreichbar.
+
+\paragraph*{Verwendbarkeit}
+Ausschließlich authentifizierte Administratoren können diese Seite verwenden.
+
+\paragraph*{Aufgabe}
+Folgende Aufgaben werden erfüllt:
+
+\begin{itemize}
+    \item Anzeigen der offiziellen Aliasse
+    \item Löschung von offiziellen Aliassen
+    \item Filterung und Sortierung von angezeigten Aliassen nach 
+    \begin{itemize}
+        \item Alias
+        \item Gebäudenummer
+        \item Raum
+    \end{itemize}
+\end{itemize}
+
+\paragraph*{Desktop}
+\subparagraph*{Statischer Aufbau}
+Die Seite ist unterteilt in zwei übereinanderliegende horizontale Boxen.
+In der oberen Box steht der zentrierte Titel \dq Offizielle Aliasse \dq.
+Die untere Box beinhaltet sämtliche angezeigten Aliase in tabellarischer Form. Die Spalten sind wie folgt gegeben:
+
+\begin{itemize}
+    \item Alias: Der Bezeichner des offiziellen Aliases
+    \item Gebäudenummer: Das zugehörige Gebäude des offiziellen Aliases
+    \item Raumnummer: Der zugehörige Raum des offiziellen Aliases, \dq - \dq{} falls kein zugehöriger Raum existiert
+    \item Aktionen: Löschen
+\end{itemize}
+
+Die Spalten 1 bis 3 beinhalten ein Textfeld zur Anzeige der Informationen.
+Die Spalten 1 bis 3 beinhalten ein Sortierungselement am rechten Ende.
+Die Spalte 4 beinhaltet eine Box. Diese beinhaltet ein Element, dass die Aktion \dq Löschen \dq{} repräsentiert.
+Jede Zeile enthält die eindeutige Identifizierung des Kartenobjektes. Diese wird nicht angezeigt.
+
+\subparagraph*{Dynamisches Verhalten}
+Bei Klick auf ein Sortierungselement wird die Sortierung der Tabelle geändert.
+Ist die Tabelle absteigend oder nicht nach der zugehörigen Spalte sortiert, so wird beim Klick auf das Sortierelement die Tabelle aufsteigend nach dieser Spalte sortiert.
+Ist die Tabelle bereits aufsteigend nach der zugehörigen Spalte sortiert, so wird beim Klick auf das Sortierelement die Tabelle absteigend nach dieser Spalte sortiert.
+
+\paragraph*{Mobil}
+\subparagraph*{Statischer Aufbau}
+Die Seite ist in zwei übereinanderliegende horizontale Boxen aufgeteilt. Diese nehmen die volle ihnen zur Verfügung stehende Horizontale ein.
+Die obere Box beinhaltet den zentrierten Titel \dq Offizielle Aliasse\dq.
+Die untere Box beinhaltet die Sortierungsoptionen und die offiziellen Aliasse.
+Die Sortierungsoptionen befinden sich ganz oben und ist in zwei Auswahlelemente aufgeteilt. 
+Das erste Auswahlelement beinhaltet einen Eintrag für die Kategorien Alias, Gebäudenummer und Raumnummer.
+Das zweite Auswahlelement beinhaltet die Einträge \dq Aufsteigend \dq{} und \dq Absteigend \dq{} oder Synonyme bzw. Abkürzungen dieser.
+Die offiziellen Aliasse befinden sich unterhalb der Sortierungsoptionen.
+Jeder offizielle Alias befindet sich in seinem eigenen Abschnitt, dieser ist wiederum in folgende Segmente aufgeteilt:
+
+\begin{enumerate}
+    \item Alias: Der Bezeichner des offiziellen Aliases
+    \item Gebäudenummer: Das zugehörige Gebäude des offiziellen Aliases
+    \item Raumnummer: Der zugehörige Raum des offiziellen Aliases, \dq - \dq{} falls kein zugehöriger Raum existiert
+    \item Aktionen: Löschen
+\end{enumerate}
+
+Segment 1 befindet sich ganz oben im Alias-Abschnitt. Segmente 2 und 3 folgen untereinander unter Segment 1.
+Segment 4 enthält eine Box. Diese beinhaltet ein Element, dass die Aktion \dq Löschen \dq{} repräsentiert.
+Der Alias-Abschnitt selber enthält die eindeutige Identifizierung des Kartenobjektes \verb#mapID# auf dass sich der Alias-Vorschlag bezieht. Dieser wird nicht angezeigt.
+
+\subparagraph*{Dynamisches Verhalten}
+Die Auswahl der Sortierungsoptionen bestimmt die angezeigte Reihenfolge der offiziellen Aliasse.
+Ist \dq Aufsteigend \dq{} ausgewählt, so werden die offiziellen Aliasse nach der ausgewählten Kategorie aufsteigend sortiert.
+Ist \dq Absteigend \dq{} ausgewählt, so werden die offiziellen Aliasse nach der ausgewählten Kategorie absteigend sortiert.
+
+\paragraph*{Allgemeines dynamisches Verhalten}
+Wird über ein Aktions- oder ein Sortierungselement gehovert oder auf ein solches geklickt, so ändert sich die Hintergrundfarbe auf eine hellere Abwandlung der vorherigen Hintergrundfarbe.
+Wird nicht mehr über das Element gehovert oder wurde etwas anderes angeklickt, so wird die Hintergrundfarbe auf den originalen Wert gesetzt.
+Im folgenden bezeichnen \verb#alias# den Bezeichner des zugehörigen offiziellen Alias und \verb#mapID# die Kartenobjektidentifizierung des zugehörigen offiziellen Aliases.
+Wird auf das Löschen-Aktionselement eines zugehörigen offiziellen Aliases geklickt, so wird die Methode \verb#remove# mit den Parametern \verb#mapID# und \verb#alias# aufgerufen. 
