Update methods as requested

--- a/Kapitel/00_Backend/MutationResolver/AliasSuggestionMutation/blacklistAliasSuggestion_String_boolean/main.tex
+++ b/Kapitel/00_Backend/MutationResolver/AliasSuggestionMutation/blacklistAliasSuggestion_String_boolean/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{\texttt{blacklistAliasSuggestion(aliasSuggestion : String) : boolean}}%$$$M
+\subsection{\texttt{blacklistAliasSuggestion(aliasSuggestion : String) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Setzt den gewünschten Alias-Vorschlag auf die Blacklist.
 \paragraph*{Beschreibung}
@@ -6,7 +6,7 @@ Die Methode ist ausschließlich von Administratoren aufzurufen.
 Die Methode ermöglicht, dass ein Administrator einen Alias-Vorschlag durch Angeben der entsprechenden Zeichenkette auf die Blacklist setzen und damit ablehnen kann.
 \paragraph*{Parameter}
 \begin{itemize}
-	\item aliasSuggestion : AliasSuggestionID
+	\item aliasSuggestion : String
 		\paragraph*{Beschreibung}
 		Die Zeichenkette des gewünschten, auf die Blacklist zu setzenden Alias-Vorschlags.
 \end{itemize}
