--- a/Kapitel/00_Backend/MutationResolver/AliasSuggestionMutation/disapproveAliasSuggestion_String_int_boolean/main.tex
+++ b/Kapitel/00_Backend/MutationResolver/AliasSuggestionMutation/disapproveAliasSuggestion_String_int_boolean/main.tex
@@ -1,14 +1,17 @@
-\subsubsection{\texttt{disapproveAliasSuggestion(aliasSuggestion : String) : boolean}}%$$$M
+\subsection{\texttt{disapproveAliasSuggestion(aliasSuggestion : String, mapID : int) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Lehnt den gewünschten Alias-Vorschlag ab.
 \paragraph*{Beschreibung}
 Die Methode ist ausschließlich von Administratoren aufzurufen.
-Die Methode ermöglicht, dass ein Administrator einen Alias-Vorschlag durch Angeben der entsprechenden Zeichenkette ablehnen kann.
+Die Methode ermöglicht, dass ein Administrator einen Alias-Vorschlag durch Angeben der entsprechenden Zeichenkette als auch der ID des dazugehörigen Kartenobjekts ablehnen kann.
 \paragraph*{Parameter}
 \begin{itemize}
 	\item aliasSuggestion : String
 		\paragraph*{Beschreibung}
 		Der Name, d.h. die Zeichenkette, des gewünschten, zu ablehnenden Alias-Vorschlags.
+	\item mapID : int
+		\paragraph*{Beschreibung}
+		Die ID des Kartenobjekts, für das der gewünschte, zu ablehnende Alias-Vorschlag als Bezeichner dienen sollte.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Wahr, wenn der gewünschte Alias-Vorschlag erfolgreich abgelehnt werden konnte, ansonsten falsch.
