--- a/Kapitel/00_Backend/MutationResolver/AliasSuggestionMutation/main.tex
+++ b/Kapitel/00_Backend/MutationResolver/AliasSuggestionMutation/main.tex
@@ -1,8 +1,7 @@
 \subsection{AliasSuggestionMutation}
 
-\inprelmod{approveAliasSuggestion_AliasSuggestionID_boolean}
-\inprelmod{approveAliasSuggestion_String_boolean}
-\inprelmod{disapproveAliasSuggestion_String_boolean}
-\inprelmod{disapproveAliasSuggestion_AliasSuggestionID_boolean}
-\inprelmod{suggestAlias_String,String,MapID_boolean}
-\inprelmod{evaluateAliasSuggestion_AliasSuggestionID,UserID,boolean_boolean}
+\inprelmod{approveAliasSuggestion_String_int_boolean}
+\inprelmod{approveAliasSuggestion_String_int_boolean}
+\inprelmod{disapproveAliasSuggestion_String_int_boolean}
+\inprelmod{suggestAlias_String,int,UserID_boolean}
+\inprelmod{evaluateAliasSuggestion_String,int,UserID,boolean_boolean}
