--- a/Kapitel/00_Backend/MutationResolver/AliasSuggestionMutation/suggestAlias_String,int,UserID_boolean/main.tex
+++ b/Kapitel/00_Backend/MutationResolver/AliasSuggestionMutation/suggestAlias_String,int,UserID_boolean/main.tex
@@ -1,21 +1,20 @@
-\subsubsection{\texttt{suggestAlias(aliasSuggestion : String, user : UserID, mapID : MapID) : boolean}}%$$$M
+\subsection{\texttt{suggestAlias(aliasSuggestion : String, mapID : int, userID : UserID) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Schlägt den gewünschten Alias vor.
 \paragraph*{Beschreibung}
 Die Methode ermöglicht, dass ein Benutzer einen Alias vorschlagen kann. 
-Hierfür wird die entsprechende Zeichenkette des Alias-Vorschlags und die ID des vorschlagenden Benutzers übergeben.
-Außerdem wird die ID des Kartenobjekts, für das der Alias als Bezeichner vorgeschlagen wird, übergeben.
+Hierfür wird die entsprechende Zeichenkette des Alias-Vorschlags und die ID des dazugehörigen Kartenobjekts als auch die ID des vorschlagenden Benutzers übergeben.
 \paragraph*{Parameter}
 \begin{itemize}
 	\item aliasSuggestion : String
 		\paragraph*{Beschreibung}
 		Der Name, d.h. die Zeichenkette, des gewünschten, zu vorschlagenden Aliasses.
-	\item user : UserID
-		\paragraph*{Beschreibung}
-		Die ID des vorschlagenden Benutzers.
-	\item mapID : MapID
+	\item mapID : int
 		\paragraph*{Beschreibung}
 		Die ID des Kartenobjekts, für das der Alias als Bezeichner vorgeschlagen wird.
+	\item userID : UserID
+		\paragraph*{Beschreibung}
+		Die ID des vorschlagenden Benutzers.
 \end{itemize}
 \paragraph*{Rückgabewert}
 Wahr, wenn der gewünschte Alias erfolgreich vorgeschlagen werden konnte, ansonsten falsch.
