--- a/Kapitel/00_Backend/QueryResolver/AliasQuery/main.tex
+++ b/Kapitel/00_Backend/QueryResolver/AliasQuery/main.tex
@@ -1,4 +1,4 @@
 \subsection{AliasQuery}
 
-\inprelmod{getAlias_MapID_ListAlias}
-\inprelmod{getAlias_MapID,UserID_ListAlias}
+\inprelmod{getAlias_int_ListAlias}
+\inprelmod{getAlias_int,int_ListAlias}
