--- a/Kapitel/00_Backend/QueryResolver/AliasSuggestionQuery/getAliasSuggestions_ListAliasSuggestion/main.tex
+++ b/Kapitel/00_Backend/QueryResolver/AliasSuggestionQuery/getAliasSuggestions_ListAliasSuggestion/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{\texttt{getAliasSuggestions() : List<AliasSuggestion> aliasSuggestions}}%$$$M
+\subsection{\texttt{getAliasSuggestions() : List<AliasSuggestion> aliasSuggestions}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Gibt eine Liste der Alias-Vorschläge, die die Mindestanzahl von positiven oder negativen Bewertungen erfüllen, zurück.
 \paragraph*{Beschreibung}
