--- a/Kapitel/00_Backend/QueryResolver/main.tex
+++ b/Kapitel/00_Backend/QueryResolver/main.tex
@@ -1,5 +1,4 @@
-\subsection{QueryResolver}
+\section{QueryResolver}
 
 \inprelmod{AliasQuery}
 \inprelmod{AliasSuggestionQuery}
-\inprelmod{UserQuery}
