--- a/Kapitel/00_Backend/MutationResolver/AliasMutation/blacklistAlias_String_boolean/main.tex
+++ b/Kapitel/00_Backend/MutationResolver/AliasMutation/blacklistAlias_String_boolean/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{\texttt{blacklistAlias(wordToForbid : String) : boolean}}%$$$M
+\subsection{\texttt{blacklistAlias(wordToForbid : String) : boolean}}%$$$M
 \paragraph*{Kurzbeschreibung}
 Setzt eine bestimmte Zeichenkette auf die Blacklist.
 \paragraph*{Beschreibung}
